53 - Fix default content visibility (#55)
* Fix default content visibility

* Update style sheet

* Apply suggested corrections

* Fix lost focus when the shortcut is used (#54)

* Fix default content visibility

* Apply suggested corrections

* Update bundle file

--- a/src/index.css
+++ b/src/index.css
@@ -48,3 +48,7 @@
   color: gray;
   background-color: transparent;
 }
+
+div.hidden{
+  display: none;
+}
